# bottastic

./: README.md  bot.py  pyproject.toml
.github/workflows/: ruff.yml
bottastic/: __init__.py  bottastic.py  cli.py
